Package ready for setuptools

--- a/README
+++ b/README
@@ -5,5 +5,15 @@ Overview
 ---------
 The purpose of this tool is to make backing up databases in bulk easy to do. This service runs database actions based on a config file. No implementation details are needed to backup you common databases.
 
-Install
---------
+## Installation
+
+Requirements:
+
+* Python 2.7 or 3.3.
+* Fabric
+* requests
+
+Install using `pip`.
+
+    pip install dbackups
+
